css/style.css
/* ... */
/**************************************************** ABOUT SECTION ****************************************************/

.aboutSection img {
    border-radius: 15px;
    margin: 0 auto;
    width: 60%;
    height: auto;
}

.aboutSection {
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: 100%;
    height: 100%;
    width: 80%;
    margin: 0 auto;
    padding-top: 60px;
    text-align: center;
}

.aboutTextContainers {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 20px 0px;
    text-align: center;
}

#aboutText3 {
    padding-top: 0;
}

.aboutImageContainers {
    margin: 0;
    padding: 0;
}

.aboutSection h1 {
    font-size: 1.2em;
}
.aboutSection p {
    font-size: 0.8em;
}

/*******************************************************PORTFOLIO************************************************************/


.portfolioSection {
    background-color: #211189;
}

#portfolioContainer {
    display: flex;
    justify-content: center;
    padding: 10px 0 0 0;
    height: 100%;
    padding-bottom: 7.5rem;
    flex-wrap: wrap;
}

.col {
    margin: 10px;
    height: 300px;
    width: 350px;
    border-radius: 10px;;
}

.project1 {
    background-image: url('../img/onestop.png');
    background-size: cover;
    background-position: left;
}

.project2 {
    background-image: url('../img/gemmasite.png');
    background-size: cover;
    background-position: center;
}
.project3 {
    background-image: url('../img/reactfacerecognition.png');
    background-size: cover;
    background-position: center;
}
.project4 {
    background-image: url('../img/chuck.png');
    background-size: cover;
    background-position: center;
}

.project5 {
    background-image: url('../img/spacecalc.png');
    background-size: cover;
    background-position: center;
}

.project6 {
    background-image: url('../img/ztmsite.png');
    background-size: cover;
    background-position: center;
}

.mouseOverWhite {
    border-radius: 10px;
    text-align: center;
    transition: 0.3s;
    opacity: 0;
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
    background-color: white;
}

.mouseOverWhite:hover {
    opacity: 0.9;
}

.portText {
    transition: 0.3s;
    color: #222;
    position: relative;
    width: 90%;
    margin: 0 auto;
}

.textActive {
    transform: translateY(100px);
    opacity: 1;
}

.textHidden {
    opacity: 0;
    transform: translateY(0px);
}

.mouseOverWhite button {
    position: relative;
    top: 130px;
}

.ctaButton {
    margin: 5px;
    -webkit-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.39);
    -moz-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.39);
    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.39);
    border-radius: 10px;
    height: 35px;
    width: 120px;
    border: none;
    text-decoration: none;
    border: 1px solid #006d6d;
    border-radius: 50em;
    transition: 0.3s;
    cursor: pointer;
    background: rgb(59,142,255);
    background: linear-gradient(180deg rgba(59,142,255,1) 35%, rgba(17,73,221,1) 100%);
    color: white;
}


/******************************************* CONTACT SECTION ********************************************************/
.contactSection {
    background-image: url('../img/footerwave.svg');
    background-position: top;
    background-size: cover;
    background-repeat: no-repeat;
    height: 600px;
    color: white;
}

.contactSectionContent {
    display: flex;
    height: 100%;
    flex-direction: column;
    justify-content: center;
    padding-top: 12rem;
}

.contactSection h1 {
    text-align: center;
    margin: 0;
}

.socialDiv {
    margin: 0 auto;
    width: 80%;
    margin-top: 45px;
}

.socialDiv span a {
    font-size: 48px; 
    color: white;
}

.socialDiv span a:hover {
    font-size: 80px; 
}

.socialDiv {
    display: flex;
    justify-content: space-evenly;
}

/*** FOOTER ***/

footer {
    background-color: rgba(0,0,0,0);
    height: 100px;
    width: 100%;
}

footer p {
    width: 80%;
    margin: 0 auto;
    text-align: center;
    position: absolute;
    bottom: 40px;
    left: 0;
    right: 0;
    font-size: 0.75em;
    padding-top: 30px;
}

/**************************************************************************************************************************************/
/**************************************************************** MEDIA QUERIES *******************************************************/
/**************************************************************************************************************************************/

/*********************************** OTHER MOBILE QUERIES ***********************************/

@media only screen and (max-width: 630px) {
    .aboutContainer img {
        width: 100%;
        height: auto;
    }

    .menu {
        padding-bottom: 3rem;
    }
}

/*********************************** TABLET MEDIA QUERIES ***********************************/  

@media only screen and (min-width: 768px) and (max-width: 796px) {
    .menu li a {
        padding: 9px 5px;
        display: block;
    }
}

@media only screen and (min-width: 780px) {

    /******** SIZING / CONTAINERS ********/
    .headerContainer {
        height: 45vh;
    }
   
}

/* stroke */
nav.stroke ul li a,
nav.fill ul li a {
  position: relative;
}

nav ul li a,
nav ul li a:after,
nav ul li a:before {
  transition: all .5s;
}

nav.stroke .item a:after {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  width: 0%;
  content: '.';
  color: transparent;
  background: #211189;
  height: 1px;
}
nav.stroke ul li a:hover:after {
  width: 100%;
} 

.button a:after {
    background: none !important;
}

